--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+.my-column-header {
+  padding-left: 60px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin: 20px;
+  border-radius: 10px;
+  width: 200px;
+}
+
+.grid {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 100px 200px;
+  width: 100%;
+  scroll-behavior: smooth;
+  overflow-x: scroll;
+  max-width: 1400px;
+}
+
+.my-column-row {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  border-radius: 10px;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  gap: 1px;
+  height: 100px;
+  width: 200px;
+}
+
+.hour {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  padding-top: 17px;
+  padding-bottom: 10px;
+  gap: 1px;
+  height: 100px;
+}
+
+.nothing {
+  width: 200px;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  gap: 1px;
+  height: 100px;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icon {
+  width: 40px;
+  height: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.all {
+  background-color: #caf0f8;
+}
+.all:hover {
+  background-color: #99c7de;
+}
+.odd {
+  background-color: #ffbc42;
+}
+.odd:hover {
+  background-color: #cc982e;
+}
+.even {
+  background-color: #a2cf63;
+}
+.even:hover {
+  background-color: #739045;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.my-table {
+  width: 100%;
+  border-spacing: 10px 1px;
+}
+.mt {
+  margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.label {
+  margin: 5px;
 }
