--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,38 @@
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
+.round-even {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #a2cf63;
+}
+
+.round-odd {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ffbc42;
+}
+ 
+.round-all {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #caf0f8;
+}
+
+.new-row {
+  display: flex;
+  flex-direction: row;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .hour {
   width: 200px;
   cursor: pointer;
