--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 .grid {
   display: grid;
-  grid-template-columns: 150px 200px;
+  grid-template-columns: 150px 1000px;
   width: 100%;
   gap: 50px;
   scroll-behavior: smooth;
@@ -28,7 +28,7 @@
   cursor: pointer;
   /* padding-top: 10px;
   padding-bottom: 10px; */
-  height: 160px;
+  height: 130px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,8 +44,8 @@
   text-align: center;
   padding: 0px;
   margin: 0px;
-  max-height: 160px;
-  height: 160px;
+  max-height: 130px;
+  height: 130px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
@@ -89,7 +89,7 @@
 .hour {
   width: 200px;
   cursor: pointer;
-  height: 160px;
+  height: 130px;
   margin-bottom: 5px;
   display: flex;
   flex-direction: column;
@@ -108,7 +108,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   gap: 1px;
-  height: 160px;
+  height: 130px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -165,4 +165,49 @@
 
 .mylabel {
   margin: 5px;
+}
+
+
+
+
+
+
+
+/* The Modal (background) */
+.my-modal {
+  display: flex;
+  /* Hidden by default */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  /* Stay in place */
+  z-index: 5;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
